# smabp

./: .envrc  .sops.yaml  CHANGELOG.md  default.nix  easy-hls-nix.json  flake.nix  install.nix  secrets.yaml  shell.nix  smabp.cabal
app/: Main.hs
nix/: amazonka-core.nix  amazonka-s3.nix  amazonka-sso.nix  amazonka-sts.nix  amazonka-test.nix  amazonka.nix
src/: Command.hs  MyLib.hs
src/Data/: Key.hs  Trace.hs
src/Operations/: Inaudible.hs  Organize.hs
src/S3/: Interface.hs
test/: Main.hs
test/Test/S3/: Interface.hs
