cabal-version:      2.4
name:               smabp
version:            0.1.0.0

common warnings
    ghc-options: -Wall

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mats Rauhala
maintainer:         mats.rauhala@iki.fi

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common deps
    build-depends:    base ^>=4.16
    default-language: Haskell2010
    ghc-options:      -Wall

library
    import: deps
    exposed-modules:  MyLib
                    , Command
                    , Operations.Inaudible
                    , Operations.Organize
                    , Data.Key
                    , Data.Trace
                    , S3.Interface

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    optparse-generic
                    , mtl
                    , text
                    , bytestring
                    , lens
                    , generic-lens
                    , typed-process
                    , directory
                    , filepath
                    , containers
                    , temporary
                    , amazonka
                    , amazonka-s3
                    , conduit
                    , unordered-containers
    hs-source-dirs:   src

executable smabp
    import: deps
    ghc-options:      -threaded
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: smabp

    hs-source-dirs:   app

test-suite smabp-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    other-modules: Test.S3.Interface

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends: base ^>=4.16.3.0
                 , smabp
                 , hspec
                 , hedgehog
                 , hspec-hedgehog
                 , dhall
                 , aeson
                 , either
                 , temporary
                 , cryptonite
                 , conduit
                 , text
                 , filepath
                 , bytestring
                 , containers
                 , unordered-containers
                 , hashable
                 , transformers
                 , amazonka
                 , lens
                 , generic-lens
                 , amazonka-s3
